# chatbot

./: .gitignore  README.md  pyproject.toml
src/chatbot/: __init__.py  conversation.py
src/chatbot/models/: llm.py  stt.py  tts.py
src/chatbot/utils/: audio.py  chatbot_logger.py
