[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BasilJ-S", email = "18bjjs@queensu.ca" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
chatbot = "chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
